--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
 publish = "public"
-command = "hugo -t tella --gc --minify"
+command = "git submodule update --remote --merge && hugo -t tella --gc --minify"
 
 [context.production.environment]
 HUGO_VERSION = "0.89.4"
