--- a/main/config.toml
+++ b/main/config.toml
@@ -4,7 +4,7 @@ author = "rok"
 languageCode = "en"
 DefaultContentLanguage = "en"
 enableInlineShortcodes = true
-theme = "tella"
+theme = "tella-ro"
 enableRobotsTXT = true
 
 # Please enable this feature if the site is available in Japanese, Chinese or Korean.
