--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "main/themes/tella-ro"]
 	path = main/themes/tella-ro
-	url = git@github.com:rokokorn/tella.git
+	url = https://github.com/rokokorn/tella.git
