--- a/main/config.toml
+++ b/main/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://tinkerlab.io"
+baseURL = "https://tinkerlab.io"
 title = "Tinkerlab"
 author = "rok"
 languageCode = "en"
@@ -33,7 +33,7 @@ enableRobotsTXT = true
     meta_description = "Tinkerlab webpage"
     meta_og_title = "Tinkerlab"
     meta_og_type = "website"
-    meta_og_url = "http://tinkerlab.io"
+    meta_og_url = "https://tinkerlab.io"
     meta_og_image = "img/tinkerlab logo.png"
     meta_og_description = "Tinkerlab company webpage"
     meta_twitter_card = "summary_large_image"
